修改评论接口，增加新闻浏览量逻辑

--- a/src/app/subPages/news-detail/news-detail.page.html
+++ b/src/app/subPages/news-detail/news-detail.page.html
@@ -22,7 +22,7 @@
       <div class="browserNum">
         <ion-chip color="primary" outline="true">
           <ion-icon name="eye-outline"></ion-icon>
-          <ion-label style="margin-left:5px" #viewNum>{{newsData.newsViewNum}}</ion-label>
+          <ion-label style="margin-left:5px">{{newsViewNum}}</ion-label>
         </ion-chip>
       </div>
       <div class="collectNum">
